--- a/app/views/minutes/_form.html.erb
+++ b/app/views/minutes/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :scheduled_at %><br />
     <%= f.datetime_select :scheduled_at %>
   </div>
+  <% f.fields_for :articles do |at| %>
+    <%= at.label :content %><br />
+    <%= at.text_area :content %>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
