--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,11 +13,15 @@
 
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.text_area :content, :size => "80x3" %>
   </div>
   <div class="field">
     <%= f.label :status %><br />
     <%= f.number_field :status %>
+  </div>
+  <div class="field">
+    <%= f.label :minute_id %><br />
+    <%= f.select :minute_id , Minute.all.collect {|m| [m.title, m.id] }, {:include_blank=>'None'}  %>
   </div>
   <div class="actions">
     <%= f.submit %>
