--- a/app/views/minutes/edit.html.erb
+++ b/app/views/minutes/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing minute</h1>
 
-<%= render 'form' %>
+<%= render 'form_edit' %>
 
 <%= link_to 'Show', @minute %> |
 <%= link_to 'Back', minutes_path %>
