--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,20 @@
 <html>
 <head>
   <title>Gijiroku</title>
-  <%= stylesheet_link_tag    "application" %>
+  <%# stylesheet_link_tag    "application" %>
+  <%= stylesheet_link_tag    "blueprint/screen", {:media=>"screen, projection"} %>
+  <%= stylesheet_link_tag    "blueprint/print", {:media=>"print"} %>
+  <!--[if lt IE 8]>
+    <%= stylesheet_link_tag    "blueprint/ie", {:media=>"screen, projection"} %>
+  <![endif]-->
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div id="container">
+<div class="prepend-1 span-18 border">
 <%= yield %>
-<%= link_to "Home", root_path %>
+</div>
+</div>
 </body>
 </html>
