delete status column from articles>

--- a/app/views/minutes/show.html.erb
+++ b/app/views/minutes/show.html.erb
@@ -10,12 +10,8 @@
   <%= @minute.scheduled_at %>
 </p>
 
+<h2>Discussed items</h2>
 <table>
-<tr>
-  <th>
-    Contents
-  </th>
-</tr>
 <tbody>
 <% @minute.articles.each do |article| %>
 <tr>
