added types for commit

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,5 @@
 <p>Find me in app/views/home/index.html.erb</p>
 <ul>
 <li><%= link_to 'Minutes', minutes_path %></li> 
+<li><%= link_to 'Types', types_path %></li> 
 </ul>
