--- a/app/views/minutes/_form_article.html.erb
+++ b/app/views/minutes/_form_article.html.erb
@@ -12,12 +12,14 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :type_id %>
+    <%= f.select :type_id, Type.all.collect {|t| [t.name, t.id] }, {:include_blank=>true} %>
+  </div>
+  <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content, :size => "80x3" %>
   </div>
   <div class="field">
-    <%# f.label :minute_id %>
-    <%# f.select :minute_id , Minute.all.collect {|m| [m.title+"(#{m.scheduled_at.strftime("%m/%d")})", m.id] }, {:include_blank=>'None'}  %>
     <%= f.hidden_field :minute_id %>
   </div>
   <div class="actions">
