--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@article) do |f| %>
   <% if @article.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="error">
       <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
 
       <ul>
@@ -12,16 +12,19 @@
   <% end %>
 
   <div class="field">
+    <%# f.label :type_id %>
+    <%# f.select :type_id, Type.all.collect {|t| [t.name, t.id] }, {:include_blank=>true} %>
+    <% @type.each do |t| %>
+    <%= f.radio_button :type_id, t.id %> 
+    <%= f.label "type_id_#{t.id}", t.name %>
+    <% end %>
+  </div>
+  <div class="field">
     <%= f.label :content %><br />
     <%= f.text_area :content, :size => "80x3" %>
   </div>
   <div class="field">
-    <%= f.label :status %><br />
-    <%= f.number_field :status %>
-  </div>
-  <div class="field">
-    <%= f.label :minute_id %><br />
-    <%= f.select :minute_id , Minute.all.collect {|m| [m.title, m.id] }, {:include_blank=>'None'}  %>
+    <%= f.hidden_field :minute_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
