--- a/app/views/minutes/_form.html.erb
+++ b/app/views/minutes/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@minute) do |f| %>
   <% if @minute.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="error">
       <h2><%= pluralize(@minute.errors.count, "error") %> prohibited this minute from being saved:</h2>
 
       <ul>
