--- a/app/views/minutes/show.html.erb
+++ b/app/views/minutes/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1><%= @minute.title %></h1>
 
 <p>
@@ -10,7 +8,6 @@
   <%= @minute.scheduled_at %>
 </p>
 
-<h2>Discussed items</h2>
 <table>
 <tbody>
 <% @minute.articles.each do |article| %>
@@ -30,8 +27,10 @@
 </tbody>
 </table>
 
+<% if flash[:warning] or flash[:notice] %>
+<p class="notice"><%= notice %></p>
+<% end %>
 <p>
-<h2>Add Article from here.</h2>
 <%= render 'form_article' %>
 </p>
 <%= link_to 'Edit', edit_minute_path(@minute) %> |
