--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="container">
-<div class="prepend-1 span-18 border">
+<div class="prepend-1 span-18 prepend-top border">
 <%= yield %>
 </div>
 </div>
