adjusted routes and user i/f

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
 <div id="container">
 <div class="prepend-1 span-18 prepend-top border">
 <%= yield %>
+<%= link_to "Home", home_index_path %>
 </div>
 </div>
 </body>
