--- a/app/views/minutes/_form_article.html.erb
+++ b/app/views/minutes/_form_article.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@article) do |f| %>
   <% if @article.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="error">
       <h2><%= pluralize(@article.errors.count, "error") %> prohibited this article from being saved:</h2>
       <ul>
       <% @article.errors.full_messages.each do |msg| %>
