added seeds.rb and adjusted minutes#show

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 <div id="container">
 <div class="prepend-1 span-18 prepend-top border">
 <%= yield %>
-<%= link_to "Home", home_index_path %>
+<%= link_to "Home", root_path %>
 </div>
 </div>
 </body>
