--- a/app/views/minutes/_form.html.erb
+++ b/app/views/minutes/_form.html.erb
@@ -13,15 +13,15 @@
 
   <div class="field">
     <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= f.text_field :title, {:size=>40} %>
   </div>
   <div class="field">
     <%= f.label :place %><br />
-    <%= f.text_field :place %>
+    <%= f.text_field :place, {:size=>40} %>
+  </div>
+  <div class="field">
+    <%= f.label :attendee %><br />
+    <%= f.text_field :attendee , {:size=>40} %>
   </div>
   <div class="field">
     <%= f.label :scheduled_at %><br />
