--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -6,6 +6,7 @@
   background-color: red;
   display: table; }
 
+/*
 #error_explanation {
   width: 450px;
   border: 2px solid red;
@@ -25,4 +26,4 @@
   ul li {
     font-size: 12px;
     list-style: square; } }
-
+*/
