--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <!--[if lt IE 8]>
     <%= stylesheet_link_tag    "blueprint/ie", {:media=>"screen, projection"} %>
   <![endif]-->
+  <%= stylesheet_link_tag "gijiroku" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
