--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,12 @@
 <body>
 <div id="container">
 <div class="prepend-1 span-18 prepend-top border">
+<% if ! notice.nil? %>
+<p class="notice"><%= notice %></p>
+<% end %>
+<% if ! alert.nil? %>
+<p class="alert"><%= alert %></p>
+<% end %>
 <%= yield %>
 <%= link_to "Home", root_path %>
 </div>
