--- a/app/views/minutes/show.html.erb
+++ b/app/views/minutes/show.html.erb
@@ -10,9 +10,8 @@
 <tbody>
 <% @minute.articles.each do |article| %>
 <tr>
-  <% if article.type.name != "Theme" %>
   <td>
-    <%= article.type.name %>
+    <%= article.type.name unless article.type.nil? %>
   </td>
   <td>
     <%#= simple_format(article.content) %>
@@ -21,19 +20,11 @@
   <td>
     <%= article.created_at.strftime("%m/%d %H:%M") %>
   </td>
-  <% else %>
-  <th colspan="3">
-    <h2><%= hbr(article.content).html_safe %></h2>
-  </th>
-  <% end %>
 </tr>
 <% end %>
 </tbody>
 </table>
 
-<% if flash[:warning] or flash[:notice] %>
-<p class="info"><%= notice %></p>
-<% end %>
 <p>
 <%= render 'minutes/form_article' %>
 </p>
