--- a/app/views/types/_form.html.erb
+++ b/app/views/types/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :order %><br />
     <%= f.number_field :order %>
   </div>
+  <div class="field">
+    <%= f.label :icon_filename %><br />
+    <%= f.number_field :icon_filename %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
