--- a/app/views/types/index.html.erb
+++ b/app/views/types/index.html.erb
@@ -13,6 +13,7 @@
   <tr>
     <td><%= type.name %></td>
     <td><%= type.order %></td>
+    <td><%= type.icon_filename %></td>
     <td><%= link_to 'Show', type %></td>
     <td><%= link_to 'Edit', edit_type_path(type) %></td>
     <td><%= link_to 'Destroy', type, confirm: 'Are you sure?', method: :delete %></td>
