--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,11 @@
 <p class="notice"><%= notice %></p>
 <% end %>
 <%= yield %>
-<%= link_to "Home", root_path %>
+<p>
+<%= link_to "Home", root_path %>  
+<%= link_to "Sign out", destroy_user_session_path, :method => :delete if user_signed_in? %>
+<%= link_to "Sign in", user_session_path unless user_signed_in? %>
+</p>
 <br />
 </div>
 </div>
