--- a/app/views/minutes/show.html.erb
+++ b/app/views/minutes/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @minute.title %></h1>
+<%= link_to 'Edit', edit_minute_path(@minute) %>
 <p>
   <%= @minute.attendee %><br />
   <%= @minute.place %><br />
@@ -21,6 +22,10 @@
   </td>
   <td>
     <%= article.created_at.strftime("%m/%d %H:%M") %>
+  </td>
+  <td>
+    <%= link_to 'Edit', edit_article_path(article) %> / 
+    <%= link_to 'Destroy', article, confirm: 'Are you sure?', method: :delete %>
   </td>
 </tr>
 <% end %>
