--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -3,27 +3,24 @@
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
-  display: table; }
+   background-color: #ff6840;
+  display: inline-table; }
 
-/*
 #error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+  border: 1px solid #ff6840;
+  padding: 5px;
+  padding-bottom: 0px;
+   margin-bottom: 20px;
+  // background-color: #fff;
   h2 {
     text-align: left;
     font-weight: bold;
     padding: 5px 5px 5px 15px;
-    font-size: 12px;
+    font-size: 1.0em;
     margin: -7px;
     margin-bottom: 0px;
-    background-color: #c00;
+    background-color: #ff6840;
     color: #fff; }
   ul li {
-    font-size: 12px;
+    font-size: 0.8em;
     list-style: square; } }
-*/
