--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,28 +2,30 @@
 <html>
 <head>
   <title>Gijiroku</title>
-  <%= stylesheet_link_tag    "blueprint/screen", {:media=>"screen, projection"} %>
-  <%= stylesheet_link_tag    "blueprint/print", {:media=>"print"} %>
-  <!--[if lt IE 8]>
-    <%= stylesheet_link_tag    "blueprint/ie", {:media=>"screen, projection"} %>
-  <![endif]-->
-  <%= stylesheet_link_tag "gijiroku" %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div id="container">
-<div class="prepend-1 span-18 prepend-top border">
-<% if ! notice.nil? %>
-<p class="notice"><%= notice %></p>
-<% end %>
-<%= yield %>
-<p>
-<%= link_to "Home", root_path %>  
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete if user_signed_in? %>
-<%= link_to "Sign in", user_session_path unless user_signed_in? %>
-</p>
-<br />
+<div class="container clearfix">
+<div class="header"> 
+  <h1>Gijiroku</h1>
+  <p class="headersub"> Minutes taking application.</p>
+</div>
+<div class="grid9 first"> 
+  <% if ! notice.nil? %>
+  <p class="notice"><%= notice %></p>
+  <% end %>
+  <%= yield %>
+</div>
+<div class="grid3">
+  <%= link_to "Minutes", root_path %> <br /> 
+  <%= link_to "New Minutes", new_minute_path %> <br /> 
+  <%= link_to "Sign out", destroy_user_session_path, :method => :delete if user_signed_in? %> <br/>
+  <%= link_to "Sign in", user_session_path unless user_signed_in? %><br/>
+</div>
+<div class="first footer"> 
+Copyright 2012 Yuki Ueda all rights reserved. 
 </div>
 </div>
 </body>
